# verne

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  COPYING  README.md
cmake/Modules/: eo_helper.cmake
data/: CMakeLists.txt  efm.desktop  efm.edc  executorui  file_display.edc  file_display_main.edc  file_icon.edc  jesus.desktop  kvasir.desktop  open_with  tab.edc
data/desktop/: CMakeLists.txt  verne.desktop
data/icon/: CMakeLists.txt
data/img/: t4lma.xcf  tab2.xcf  tab3.xcf  tab4.xcf
data/test/: shortfile
data/theme/efm/: CMakeLists.txt  default.edc  efm.edc  jesus.edc  kvasir.edc
data/theme/elm_ext/: CMakeLists.txt  elm_ext.edc  elm_ext.edc.edj  file_display.edc  file_display_gengrid_style.edc  file_display_genlist_style.edc  file_icon.edc  file_preview.edc  file_selector.edc  items.edc  tab.edc
pkgbuild/: PKGBUILD
spec/: verne.spec
src/lib/: CMakeLists.txt  Efm.h  archive.c  efm_priv.h  fm_monitor.c  main.c
src/lib/efm/: CMakeLists.txt  Efm.h  archive.c  archive.h  archive_access.h  archive_libarchive.c  config.h.cmake  efm.eo  efm.eot  efm_archive_file.c  efm_archive_file.eo  efm_archive_monitor.c  efm_archive_monitor.eo  efm_file.c  efm_file.eo  efm_filter.c  efm_filter.eo  efm_fs_file.c  efm_fs_file.eo  efm_fs_monitor.c  efm_fs_monitor.eo  efm_monitor.c  efm_monitor.eo  efm_priv.h  fm_monitor.c  main.c
src/lib/emous/: CMakeLists.txt  Emous.h  Emous_Test.h  config.h.cmake  emous.c  emous.eo  emous_device.c  emous_device.eo  emous_device_class.eo  emous_device_type.eo  emous_eo_impl.c  emous_manager.c  emous_manager.eo  emous_mm_linux.c  emous_mp.c  emous_priv.h  emous_type.c  emous_type.eo  main.c  mount.c  mount2.c
src/lib/emous/modules/udisk/: CMakeLists.txt  device.c  emous_device_udisks.eo  emous_type_udisks.eo  main.c  type.c  udisk.c  udisk.h  udisk_dbus.c
src/lib/tree/: CMakeLists.txt  Graph.h  efl_compare.c  efl_compare.eo  efl_tree_base.c  efl_tree_base.eo  graph_priv.h
src/module/: CMakeLists.txt  e_bg_widget.c  e_bg_widget.eo  e_mod_main.c  module.desktop
src/test/: CMakeLists.txt  filedisplay.c  fileicon.c  test_archive.c  test_fm_monitor.c  test_mount.c  test_pane.c  test_tree.c
src/test/dialogs/: CMakeLists.txt  main.c
src/test/efm_test/: CMakeLists.txt  archiv.tar  test_efm.c
src/test/emous_test/: CMakeLists.txt  emous_device_debug.eo  emous_test.h  emous_type_debug.eo  main.c  test_mount.c
src/widgets/: CMakeLists.txt  Elementary_Ext.h  config.h.cmake  elementary_ext.c  elementary_ext_priv.h  elm_file_display.c  elm_file_display.eo  elm_file_display.h  elm_file_display_bookmark.c  elm_file_display_config.c  elm_file_display_debug.c  elm_file_display_grid.c  elm_file_display_helper.c  elm_file_display_list.c  elm_file_display_log.c  elm_file_display_preview.c  elm_file_display_priv.h  elm_file_display_tree.c  elm_file_display_view.c  elm_file_display_view.eo  elm_file_display_view_debug.c  elm_file_display_view_grid.c  elm_file_display_view_grid.eo  elm_file_icon.c  elm_file_icon.c.notused  elm_file_icon.eo  elm_file_mimetype_cache.c  elm_file_mimetype_cache.eo  elm_tab_pane.c  elm_tab_pane.eo  theme2.edc
src/widgets/dialog/: elm_dialog.c  elm_dialog.eo  elm_dialog_decision.c  elm_dialog_decision.eo
src/widgets/file/: elm_file_bookmarks.c  elm_file_bookmarks.eo  elm_file_config.c  elm_file_config.h  elm_file_detail.c  elm_file_detail.eo  elm_file_display.c  elm_file_display.eo  elm_file_display.h  elm_file_display_bookmark.c  elm_file_display_config.c  elm_file_display_helper.c  elm_file_display_preview.c  elm_file_display_priv.h  elm_file_display_view.c  elm_file_display_view.eo  elm_file_icon.c  elm_file_icon.eo  elm_file_icon.h  elm_file_icon2.c  elm_file_item_compare.c  elm_file_item_compare.eo  elm_file_mimetype_cache.c  elm_file_mimetype_cache.eo  elm_file_preview.c  elm_file_preview.eo  elm_file_selector.c  elm_file_selector.eo  elm_file_view.c  elm_file_view.eo
src/widgets/file/views/: View.h  elm_file_display_view_debug.c  elm_file_display_view_debug.eo  elm_file_display_view_grid.c  elm_file_display_view_grid.eo  elm_file_display_view_list.c  elm_file_display_view_list.eo  sort.c  view_common.c  view_common.h
src/widgets/items/: elm_items.h  elm_items_display.c  elm_items_display.eo  elm_items_item.c  elm_items_item.eo  elm_items_list.c  elm_items_list.eo  elm_items_list_pan.eo  elm_items_priv.h
src/widgets/views/: elm_file_display_view_debug.c  elm_file_display_view_debug.eo  elm_file_display_view_grid.c
